fix title bar spacing, fix share button wrong network, fix sendAmount is undefined

--- a/src/sass/views/tab-home.scss
+++ b/src/sass/views/tab-home.scss
@@ -108,7 +108,8 @@
     &__logo {
       height: $v-logo-height;
       position: relative;
-      padding: 5px;
+      vertical-align: middle;
+      top: -5%;
     }
     &__wallet {
       &__multisig-number {
